5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1715_3068.log
== TEST (2019-05-02 16:17:05) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0):
	if(S>=2 or S<=20):
		if(d=="CIMITARRA"):
			dano=(2*S)+(2*d)
			print(dano)
	
			
			
-- ERROR:
File "XXXX", line 6
    if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:19) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(d=="CIMITARRA"):
			dano=(2*S)+(2*d)
			print(dano)
	
			
			
-- ERROR:
File "XXXX", line 6
    if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:32) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(d=="CIMITARRA"):
			dano=(2*S)+(2*d)
			print(dano)
	
			
			
-- ERROR:
File "XXXX", line 6
    if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:06) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(d=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
	
			
			
-- ERROR:
File "XXXX", line 6
    if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:24) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(d=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
			print(d)
	
			
			
-- ERROR:
File "XXXX", line 6
    if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0):
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:58) 
-- CODE:
n=input("nome da arma: ")
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(d.upper()=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
			print(d)
	
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(d.upper()=="CIMITARRA"):
AttributeError: 'int' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:22:42) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
			print(d)
	
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(d.upper()=="CIMITARRA"):
AttributeError: 'int' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:24:18) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
	
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(d.upper()=="CIMITARRA"):
AttributeError: 'int' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:29:01) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- EXECUTION TIME:
0.185835
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:14) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:35) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:02) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:06) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 or s1<=10) and (s2>=1 or s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:45) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 and s1<=10) and (s2>=1 and s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:58) 
-- CODE:
n=input("nome da arma: ").upper()
d=int(input("destreza: "))
s1=int(input("valor sorteado1: "))
s2=int(input("valor sorteado2: "))
S=s1+s2
if((s1>=1 and s1<=10) and (s2>=1 and s2<=10) and (d>0)):
	if(S>=2 or S<=20):
		if(n=="CIMITARRA"):
			dano = (2*S)+(2*d)
			print(dano)
		elif(n=="KATANA"):
			dano=(2*S)+d
			print(dano)
		elif(n=="SABRE"):
			dano= S +2*d
			print(dano)
		else:
			print("Entrada invalida")
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
			
			
-- EXECUTION TIME:
0.158583
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
